Prevent in6_ifaddr from being freed with holding its psref

This is a possible fix for PR kern/51828.